Fix layout bug on small screens
The content would overlap the viewport.

--- a/public/src/less/style.less
+++ b/public/src/less/style.less
@@ -196,7 +196,6 @@ label div.thing {
 }
 
 .wrapper {
-	width: 100%;
 	max-width: @maxwidth;
 	margin: 0 auto;
 	padding: 0 1em;
